[package]
name = "io_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "io_plugin"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.43.0", features = ["fmt", "dtype-date", "timezones", "lazy"], default-features = false }
pyo3 = { version = "0.22.2", features = ["abi3-py38"] }
pyo3-polars = { version = "*", features = ["derive", "lazy"] }
rand = { version = "0.8.5", features = [] }
